--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "popper.js": "^1.14.6",
     "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.1.1",
-    "webpack": "^4.28.3",
+    "webpack": "4.28.3",
     "webpack-cli": "^3.2.0",
     "webpack-dev-server": "^3.1.14"
   }
